<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:background="@color/black">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_weight="0.6"
           android:background="@drawable/menu_item1">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   android:layout_weight="0.2"
                   android:paddingLeft="40dp">

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/voorNaam"
                       android:id="@+id/voorNaam"
                       android:textSize="22sp"
                       android:layout_marginTop="40dp"
                       android:textColor="@color/textColorDark"
                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/achterNaam"
                       android:id="@+id/achterNaam"
                       android:textSize="22sp"
                       android:layout_marginTop="2dp"
                       android:textColor="@color/textColorDark"
                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/aantalPersonen"
                       android:id="@+id/aantalPersonen"
                       android:layout_marginTop="8dp"
                       android:textColor="@color/buttonColorRed"
                       android:textSize="24sp"
                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/vervalDatum"
                       android:id="@+id/vervaldatum"
                       android:textSize="17sp"
                       android:layout_marginTop="40dp"
                       android:textColor="@color/textColorLight"
                       />

               </LinearLayout>


               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   android:layout_weight="0.8"
                   >

                   <Button
                       android:layout_width="42dp"
                       android:layout_height="42dp"
                       android:background="@drawable/button_dark"
                       android:text="X"
                       android:id="@+id/buttonSluit"
                       android:textSize="20sp"
                       android:textColor="@color/textColorLight"
                       android:layout_marginTop="35dp"
                       android:onClick="closeActivity"/>



               </LinearLayout>


           </LinearLayout>



       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.4"
            android:background="@drawable/white_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_weight="0.5"
                android:id="@+id/scanInstructies"
                android:paddingTop="50dp"
                android:textSize="16sp"
                android:text="@string/scanInstructies"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:layout_marginBottom="120dp"
                android:src="@drawable/qr_code"/>



        </LinearLayout>





    </LinearLayout>




</RelativeLayout>
